--- a/comprobando.sass
+++ b/comprobando.sass
@@ -204,8 +204,7 @@ $contenido: "Contenido no nulo" !default
     contenido: $contenido
 /*REGLAS @ Y DIRECTIVAS*/
 /*LA REGLA @import*/
-/* 
- *    Regla @                         Resultado
+/*    Regla @                         Resultado
  *    @import "foo.scss"              Se importa el archivo foo.scss
  *    @import "foo"                   Se importa el archivo foo.scss
  *    @import "foo.css"               @import "foo.css"
