--- a/css/comprobando.css
+++ b/css/comprobando.css
@@ -250,8 +250,7 @@ p {
 
 /*REGLAS @ Y DIRECTIVAS*/
 /*LA REGLA @import*/
-/*
- *    Regla @                         Resultado
+/*    Regla @                         Resultado
  *    @import "foo.scss"              Se importa el archivo foo.scss
  *    @import "foo"                   Se importa el archivo foo.scss
  *    @import "foo.css"               @import "foo.css"
