--- a/comprobando.sass
+++ b/comprobando.sass
@@ -1,3 +1,9 @@
+/*LA REGLA @import*/
+/*EJEMPLO 1*/
+$family: unquote("Droid+Sans")
+@import url("http://fonts.googleapis.com/css?family=#{$family}")
+/*EJEMPLO 2*/
+@import "rounded-corners", "text-shadow"
 /*REGLAS ANIDADAS*/
 /*EJEMPLO 1*/
 #main p 
@@ -211,3 +217,5 @@ $contenido: "Contenido no nulo" !default
  *    @import "foo" screen            @import "foo" screen
  *    @import "http://foo.com/bar"    @import "http://foo.com/bar"
  *    @import url(foo)                @import url(foo) */
+ /* Los ejemplos se hacen en la parte superior ya que @import debe estar al comienzo */
+/*HOJAS DE ESTILO PARCIALES*/
