--- a/comprobando.sass
+++ b/comprobando.sass
@@ -4,6 +4,9 @@ $family: unquote("Droid+Sans")
 @import url("http://fonts.googleapis.com/css?family=#{$family}")
 /*EJEMPLO 2*/
 @import "rounded-corners", "text-shadow"
+/*HOJAS DE ESTILO PARCIALES*/
+/*EJEMPLO 1*/
+@import "colors"
 /*REGLAS ANIDADAS*/
 /*EJEMPLO 1*/
 #main p 
@@ -219,3 +222,12 @@ $contenido: "Contenido no nulo" !default
  *    @import url(foo)                @import url(foo) */
  /* Los ejemplos se hacen en la parte superior ya que @import debe estar al comienzo */
 /*HOJAS DE ESTILO PARCIALES*/
+/* Los ejemplos se hacen en la parte superior ya que @import debe estar al comienzo */
+/*ANIDANDO REGLAS @import*/
+/* Los archivos importados con reglas @import anidadas no pueden
+ * contener elementos y directivas que sólo pueden colocarse en el
+ * primer nivel jerárquico de las hojas de estilos, como @mixin o 
+ * @charset */
+ /*EJEMPLO 1*/
+#main
+    @import "example"
