--- a/css/comprobando.css
+++ b/css/comprobando.css
@@ -283,8 +283,13 @@ p {
  * contener elementos y directivas que sólo pueden colocarse en el
  * primer nivel jerárquico de las hojas de estilos, como @mixin o
  * @charset */
+/* Tampoco es posible anidar reglas @import dentro de los mixin
+  * y las directivas de control */
 /*EJEMPLO 1*/
 #main .example {
   color: blue;
 }
+
+/*LA REGLA @media*/
+/*EJEMPLO 1*/
 /*# sourceMappingURL=comprobando.css.map */
